# mytilus

./: AGENTS.md  README.md  debug.py  debug_axiom.py  debug_recursion.py  discorun.tex  pyproject.toml  regenerate_svgs.py  test_tuplify.py  test_ty_scratch.py  trace_detailed.py  trace_evaluation.py  tutorial.ipynb
discorun/: __init__.py  test_compiler.py  test_discorun_architecture.py  test_interpreter.py  test_metaprog.py  test_state.py  test_wire.py
discorun/comput/: __init__.py  boxes.py  compile.py
discorun/metaprog/: __init__.py  compile.py  core.py
discorun/pcc/: __init__.py  core.py
discorun/state/: __init__.py  core.py  test_procs.py
discorun/wire/: __init__.py  functions.py  services.py  types.py
examples/: README.md  shell.yaml
examples/aoc2025/: README.md
examples/pipeline/: argv-bin.yaml  argv-example.yaml  dup-argv-bin.yaml  mybin.yaml  run-hello-dup.yaml  run-hello.yaml
mytilus/: SKILL.md  __main__.py  files.py  interactive.py  mcp.py  watch.py
mytilus/pcc/: loader.py  (+3 more)
scratch/: update_goldens.py
tests/: test_bin_mytilus.py  test_bin_widish.py  test_compiler.py  test_discorun_architecture.py  test_hardening.py  test_hif.py  test_interpreter.py  test_lang.py  test_loader.py  test_main.py  test_mcp_output.py  test_metaprog.py  test_metaprog_integration.py  test_mytilus_architecture.py  test_runner.py  test_state.py  test_state_integration.py  test_total_evaluation.py  test_watch.py  test_wire.py  test_wire_integration.py
widip/: SKILL.md  __main__.py  computer.py  files.py  hif.py  loader.py  metaprog.py  state.py  watch.py  widish.py
(+72 files in other folders)
