[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mytilus"]

[project]
name = "mytilus"
version = "0.1.0"
description = "Mytilus is an interactive environment for computing with wiring diagrams in modern systems"
dependencies = [
  "discopy>=1.2.2", "pyyaml>=6.0.1", "watchdog>=4.0.1", "nx-yaml==0.4.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Source" = "https://github.com/colltoaction/mytilus"

